--- a/Vienna/Interfaces/Base.lproj/ActivityViewer.xib
+++ b/Vienna/Interfaces/Base.lproj/ActivityViewer.xib
@@ -17,6 +17,7 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <window title="Activity" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hidesOnDeactivate="YES" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="activityWindow" animationBehavior="default" tabbingMode="disallowed" id="8" userLabel="Panel">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" resizable="YES" utility="YES"/>
+            <windowCollectionBehavior key="collectionBehavior" moveToActiveSpace="YES" fullScreenAuxiliary="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="150" y="449" width="450" height="360"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1025"/>
